--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "angular-responsive-carousel": "^2.0.1",
     "blueimp-canvas-to-blob": "^3.28.0",
     "bootstrap": "^4.5.3",
+    "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "ng-material-multilevel-menu": "^5.5.3",
@@ -41,11 +42,13 @@
     "ngx-file-drop": "^11.0.2",
     "ngx-image-cropper": "^3.3.2",
     "ngx-photo-editor": "^0.3.3",
+    "ngx-print": "^1.2.0-beta.5",
     "primeicons": "^4.1.0",
     "primeng": "^11.1.0-rc.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.13.0",
     "tslib": "^2.0.0",
+    "xlsx": "^0.16.9",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
