--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "TextEditor": {
+    "schoolapp": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/TextEditor",
+            "outputPath": "dist/schoolapp",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -48,8 +48,8 @@
               ],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
+              "sourceMap": true,
+              "namedChunks": true,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
@@ -71,13 +71,13 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "TextEditor:build",
+            "browserTarget": "schoolapp:build",
             "proxyConfig": "src/proxy.Conf.json"
             
           },
           "configurations": {
             "production": {
-              "browserTarget": "TextEditor:build:production",
+              "browserTarget": "schoolapp:build:production",
               "proxyConfig": "src/proxy.prod.Conf.json"
             }
           }
@@ -85,7 +85,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "TextEditor:build"
+            "browserTarget": "schoolapp:build"
           }
         },
         "test": {
@@ -123,16 +123,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "TextEditor:serve"
+            "devServerTarget": "schoolapp:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "TextEditor:serve:production"
+              "devServerTarget": "schoolapp:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "TextEditor"
+  "defaultProject": "schoolapp"
 }
