--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.3",
+    "@angular/animations": "~12.1.1",
     "@angular/cdk": "^11.0.3",
-    "@angular/common": "^11.0.4",
-    "@angular/compiler": "~11.0.3",
-    "@angular/core": "^11.0.4",
+    "@angular/common": "^12.1.1",
+    "@angular/compiler": "~12.1.1",
+    "@angular/core": "^12.1.1",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "^11.0.3",
-    "@angular/localize": "^11.0.4",
+    "@angular/forms": "^12.1.1",
+    "@angular/localize": "^12.1.1",
     "@angular/material": "^11.0.3",
-    "@angular/platform-browser": "~11.0.3",
-    "@angular/platform-browser-dynamic": "~11.0.3",
-    "@angular/router": "~11.0.3",
+    "@angular/platform-browser": "~12.1.1",
+    "@angular/platform-browser-dynamic": "~12.1.1",
+    "@angular/router": "~12.1.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "@ngmodule/material-carousel": "^0.6.0",
     "@ngu/carousel": "^3.0.2",
@@ -44,24 +44,22 @@
     "ngx-photo-editor": "^0.3.3",
     "ngx-print": "^1.2.0-beta.5",
     "primeicons": "^4.1.0",
-    "primeng": "^11.1.0-rc.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.13.0",
     "tslib": "^2.0.0",
     "xlsx": "^0.16.9",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.3",
-    "@angular/cli": "^11.1.2",
-    "@angular/compiler-cli": "~11.0.3",
-    "@angular/localize": "^11.0.3",
+    "@angular-devkit/build-angular": "^12.1.1",
+    "@angular/cli": "^12.1.1",
+    "@angular/compiler-cli": "^12.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
@@ -69,6 +67,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.3.5"
   }
 }
