--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "mathjs": "^9.4.4",
     "ng-material-multilevel-menu": "^5.5.3",
     "ng2-ckeditor": "^1.2.9",
     "ngx-dropzone": "^2.3.0",
