--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jquery": "^3.5.5",
     "ag-grid-angular": "^24.1.0",
     "ag-grid-community": "^24.1.0",
+    "alasql": "^1.7.3",
     "angular-responsive-carousel": "^2.0.1",
     "bootstrap": "^4.5.3",
     "exifr": "^4.3.5",
