--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@auth0/angular-jwt": "^5.0.2",
+    "@fullcalendar/angular": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "@ngmodule/material-carousel": "^0.6.0",
     "@ngu/carousel": "^3.0.2",
     "@types/jquery": "^3.5.5",
     "ag-grid-angular": "^24.1.0",
     "ag-grid-community": "^24.1.0",
-    "alasql": "^1.7.3",
+    "alasql": "^0.2.2",
     "angular-responsive-carousel": "^2.0.1",
     "bootstrap": "^4.5.3",
     "exifr": "^4.3.5",
@@ -53,8 +56,8 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.1.1",
-    "@angular/cli": "^12.1.1",
+    "@angular-devkit/build-angular": "^13.0.3",
+    "@angular/cli": "^13.0.3",
     "@angular/compiler-cli": "^12.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
@@ -66,7 +69,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.3.5"
