--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,72 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/0.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/1.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/2.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/3.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/4.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/5.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/6.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/7.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/8.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/9.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/10.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/11.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/12.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/13.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/14.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/15.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/16.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/17.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/18.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/19.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/20.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/21.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/22.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/23.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/index.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/index.pack.old
+.angular/cache/babel-webpack/1a6c856dd15fbe2e7be79672bb6f00e7.json
+.angular/cache/babel-webpack/03b131c8056562acb0fba769e3f8427d.json
+.angular/cache/babel-webpack/4bcb38284754bd67f803f430f013dff0.json
+.angular/cache/babel-webpack/04c61966ec05ecc40e4bd421b594dccf.json
+.angular/cache/babel-webpack/5c9f0e7c7cee601fe47fcce46a745730.json
+.angular/cache/babel-webpack/6b8c93e29b4ddcd18e8737542d1f1a66.json
+.angular/cache/babel-webpack/6e22c5894e604759aae66c1e080b26e2.json
+.angular/cache/babel-webpack/8bc55b0a2dac6b0c05b730ffa7699ee5.json
+.angular/cache/babel-webpack/8db7088802649d4b941ec9a7deb2f3cd.json
+.angular/cache/babel-webpack/8ec6f1383bb4941dcefbd4906c4681be.json
+.angular/cache/babel-webpack/8ff68269ee24ffbd5e914109f87257ef.json
+.angular/cache/babel-webpack/15dc150ffcf6f5618f2f39f7c2cf6ff0.json
+.angular/cache/babel-webpack/30b8b50924f364663f7fbfbfce34fffd.json
+.angular/cache/babel-webpack/94e1d4c8de8316fde31ed4f4ca1f6c4d.json
+.angular/cache/babel-webpack/354d058bab05548be88ff5c1d9928009.json
+.angular/cache/babel-webpack/364be31d7637b69ffbf0334f8bc84610.json
+.angular/cache/babel-webpack/410b067c3107ad1bc00059be683d3583.json
+.angular/cache/babel-webpack/1595abf78a6e438c2d4b1471bc578ffc.json
+.angular/cache/babel-webpack/1694e2e42e606c85e029119bccb66498.json
+.angular/cache/babel-webpack/7729afe0e586ea1c9092637bac6d781c.json
+.angular/cache/babel-webpack/09544ab88d5b175413114912048ec9ff.json
+.angular/cache/babel-webpack/9918b547610905e57c856b8aa2fd121e.json
+.angular/cache/babel-webpack/046386a641fbfd759bd189992e357585.json
+.angular/cache/babel-webpack/0004084881673aa72a29ba95ee22b483.json
+.angular/cache/babel-webpack/b5a77465af927ae4767fc1bd38d0e661.json
+.angular/cache/babel-webpack/b7adc6ffb2e776aa180f0465dc972c9f.json
+.angular/cache/babel-webpack/c4c27d1c91cd0ac5d7e4ffc77646702a.json
+.angular/cache/babel-webpack/c05c2ac57f38da667eab3d27599af800.json
+.angular/cache/babel-webpack/c446a678d178cd027fb60f256edeb9fd.json
+.angular/cache/babel-webpack/dbee5ed9ae79bfd731b2e247d3ce7341.json
+.angular/cache/babel-webpack/e2c97146d86bedd55521b8add01b9547.json
+.angular/cache/babel-webpack/e85e986ef908c179815cc37093221173.json
+.angular/cache/babel-webpack/e295d7eac6ce2392ee670fcb87f701f7.json
+.angular/cache/babel-webpack/f90bc879d319aa861d4e443456c50d69.json
+.angular/cache/babel-webpack/f3437a62718fea3eabed1e0f422f7100.json
+.angular/cache/babel-webpack/fb768c87fc584e667633aba15d5a29dc.json
+.angular/cache/babel-webpack/fe360adbfbb0fb28c9db913f201ad427.json
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/0.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/1.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/index.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/0.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/1.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/index.pack
