--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.0.2",
-    "@angular/cdk": "^12.2.13",
+    "@angular/cdk": "^13.0.2",
     "@angular/common": "^13.0.2",
     "@angular/compiler": "~13.0.2",
     "@angular/core": "^13.0.2",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "^13.0.2",
     "@angular/localize": "^13.0.2",
-    "@angular/material": "^12.2.13",
+    "@angular/material": "^13.0.2",
     "@angular/platform-browser": "~13.0.2",
     "@angular/platform-browser-dynamic": "~13.0.2",
     "@angular/router": "~13.0.2",
@@ -27,13 +27,14 @@
     "@fullcalendar/angular": "^5.10.1",
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "@ngmodule/material-carousel": "^0.6.0",
     "@ngu/carousel": "^3.0.2",
     "@types/jquery": "^3.5.5",
     "ag-grid-angular": "^24.1.0",
     "ag-grid-community": "^24.1.0",
-    "alasql": "^0.2.2",
+    "alasql": "^1.7.3",
     "angular-responsive-carousel": "^2.0.1",
     "bootstrap": "^4.5.3",
     "exifr": "^4.3.5",
@@ -44,7 +45,7 @@
     "ng-material-multilevel-menu": "^5.5.3",
     "ng2-ckeditor": "^1.2.9",
     "ngx-dropzone": "^2.3.0",
-    "ngx-file-drop": "^11.0.2",
+    "ngx-file-drop": "^11.3.0",
     "ngx-image-cropper": "^3.3.2",
     "ngx-photo-editor": "^0.3.3",
     "ngx-print": "^1.2.0-beta.5",
