menu permission implemented

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,20 @@ Thumbs.db
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/0.pack
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/1.pack
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/index.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/0.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/2.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/4.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/7.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/8.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/10.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/11.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/14.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/15.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/16.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/19.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/21.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/24.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/28.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/29.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/30.pack
