--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,13 @@ Thumbs.db
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/28.pack
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/29.pack
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/30.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/5.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/12.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/13.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/17.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/22.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/23.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
