sub master added

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,6 @@ Thumbs.db
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
