--- a/.gitignore
+++ b/.gitignore
@@ -137,9 +137,8 @@ Thumbs.db
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/22.pack_
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/23.pack_
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
-.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
-.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
-.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
-.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
-.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
-.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/26.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/6.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/26.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/30.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/26.pack_
