--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,4 @@ Thumbs.db
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/26.pack_
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/30.pack_
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/26.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/26.pack_
