--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,7 @@ Thumbs.db
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/30.pack_
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/26.pack_
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/26.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/1.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/24.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/26.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
