--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,5 @@ Thumbs.db
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/24.pack
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/26.pack_
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/26.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/31.pack_
