--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,8 @@ Thumbs.db
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/28.pack_
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/20.pack_
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/1.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/1.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/9.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/26.pack
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/26.pack_
+.angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
