--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,29 @@ Thumbs.db
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/26.pack
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/26.pack_
 .angular/cache/angular-webpack/2725e3800906a501a5e45d660b43dab39f2d4293/27.pack
+.angular/cache/babel-webpack/1c19b961b1fecb71ef644d6fbe354dc7.json
+.angular/cache/babel-webpack/1c681da710fad5eda963e034818186a6.json
+.angular/cache/babel-webpack/001fa0402ec2c478d6ed5ae051d21134.json
+.angular/cache/babel-webpack/3baff7564c14cdc6bfcafdb01ff614cd.json
+.angular/cache/babel-webpack/4a748b4f435806ec74a48b2624572cbd.json
+.angular/cache/babel-webpack/4f20cf2219931722d9ec6b30bb6403a0.json
+.angular/cache/babel-webpack/5c1ba46d974d2d745867b3855be98d1a.json
+.angular/cache/babel-webpack/8bc09a769304ebd561d03f4e81e6f3ba.json
+.angular/cache/babel-webpack/8f2b1b25a9572533156bbf89b965d9cc.json
+.angular/cache/babel-webpack/10f2057f5b28fc03283b5b23609853d5.json
+.angular/cache/babel-webpack/44a253363675aff8e4608eb384be34ce.json
+.angular/cache/babel-webpack/62f88671103936df5880f05ffd8e387e.json
+.angular/cache/babel-webpack/4798abb9e1ff39cbb2b3217769f5b1e3.json
+.angular/cache/babel-webpack/9432c7ef0de25b405f1cbb5a86acdfb6.json
+.angular/cache/babel-webpack/31710a3ee6f9bb9914be3ae61bcd70f5.json
+.angular/cache/babel-webpack/83766be01a65d058659f2be0f288d746.json
+.angular/cache/babel-webpack/416721d4cad3ecbbd822b89cd2d46a24.json
+.angular/cache/babel-webpack/2695770a4cbd35f807aeed2edef32f34.json
+.angular/cache/babel-webpack/74943734990392e26f190a00b34f78ba.json
+.angular/cache/babel-webpack/a3c272ee0678edbedef746073bc5ded9.json
+.angular/cache/babel-webpack/b150d35dd8f22b4abbd5dab9128207c5.json
+.angular/cache/babel-webpack/b415ceeea8b52725b4658cc79eb6aa57.json
+.angular/cache/babel-webpack/bd5641382505b62935ec6d305e64e517.json
+.angular/cache/babel-webpack/c4dc00494d6bf0d03414269103eec961.json
+.angular/cache/babel-webpack/cf38dcea9c842e022ea9c15da4805740.json
+.angular/cache/babel-webpack/f45228cef7761ebc5f7aaa7fdf9732cb.json
