production build generated albumcomponents in two module

--- a/angular.json
+++ b/angular.json
@@ -58,6 +58,7 @@
                 }
               ],
               "optimization": true,
+              "aot":true,
               "outputHashing": "all",
               "extractLicenses": true,
               "vendorChunk": false,
