--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "alasql": "^1.7.3",
     "angular-responsive-carousel": "^2.0.1",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.3",
     "exifr": "^4.3.5",
     "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "mathjs": "^9.4.4",
     "ng-material-multilevel-menu": "^5.5.3",
+    "ng2-charts": "^2.3.0",
     "ng2-ckeditor": "^1.2.9",
     "ngx-dropzone": "^2.3.0",
     "ngx-file-drop": "^11.3.0",
