--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^7.0.1",
     "@angular/animations": "~13.0.2",
     "@angular/cdk": "^13.0.2",
     "@angular/common": "^13.0.2",
@@ -49,6 +50,7 @@
     "ngx-dropzone": "^2.3.0",
     "ngx-file-drop": "^11.3.0",
     "ngx-image-cropper": "^3.3.2",
+    "ngx-mat-moment-adapter": "^1.0.0-beta.1",
     "ngx-photo-editor": "^0.3.3",
     "ngx-print": "^1.2.0-beta.5",
     "primeicons": "^4.1.0",
