--- a/package.json
+++ b/package.json
@@ -29,18 +29,22 @@
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
-    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "@ngmodule/material-carousel": "^0.6.0",
     "@ngu/carousel": "^3.0.2",
     "@types/jquery": "^3.5.5",
     "ag-grid-angular": "^24.1.0",
     "ag-grid-community": "^24.1.0",
     "alasql": "^1.7.3",
+    "angular-calendar": "^0.29.0",
     "angular-responsive-carousel": "^2.0.1",
+    "angularx-flatpickr": "^6.6.0",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.3",
+    "date-fns": "^2.28.0",
     "exifr": "^4.3.5",
     "file-saver": "^2.0.5",
+    "flatpickr": "^4.6.13",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "mathjs": "^9.4.4",
