--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "~14.1.2",
     "@angular/service-worker": "^14.1.2",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ckeditor/ckeditor5-build-classic": "^35.1.0",
     "@fullcalendar/angular": "^5.10.1",
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
@@ -34,6 +35,7 @@
     "@ngmodule/material-carousel": "^0.6.0",
     "@ngu/carousel": "^3.0.2",
     "@types/jquery": "^3.5.5",
+    "@types/quill": "^1.3.10",
     "ag-grid-angular": "^24.1.0",
     "ag-grid-community": "^24.1.0",
     "alasql": "^1.7.3",
@@ -52,14 +54,15 @@
     "moment": "^2.29.1",
     "ng-material-multilevel-menu": "^5.5.3",
     "ng2-charts": "^2.3.0",
-    "ng2-ckeditor": "^1.2.9",
     "ngx-dropzone": "^2.3.0",
     "ngx-file-drop": "^11.3.0",
     "ngx-image-cropper": "^3.3.2",
     "ngx-mat-moment-adapter": "^1.0.0-beta.1",
     "ngx-photo-editor": "^0.3.3",
     "ngx-print": "^1.2.0-beta.5",
+    "ngx-quill": "^19.0.1",
     "primeicons": "^4.1.0",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.13.0",
     "xlsx": "^0.17.2",
