--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@angular/router": "~14.1.2",
     "@angular/service-worker": "^14.1.2",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ckeditor/ckeditor5-angular": "^4.0.0",
     "@ckeditor/ckeditor5-build-classic": "^35.1.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^35.1.0",
     "@fullcalendar/angular": "^5.10.1",
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
@@ -35,7 +37,6 @@
     "@ngmodule/material-carousel": "^0.6.0",
     "@ngu/carousel": "^3.0.2",
     "@types/jquery": "^3.5.5",
-    "@types/quill": "^1.3.10",
     "ag-grid-angular": "^24.1.0",
     "ag-grid-community": "^24.1.0",
     "alasql": "^1.7.3",
@@ -60,9 +61,7 @@
     "ngx-mat-moment-adapter": "^1.0.0-beta.1",
     "ngx-photo-editor": "^0.3.3",
     "ngx-print": "^1.2.0-beta.5",
-    "ngx-quill": "^19.0.1",
     "primeicons": "^4.1.0",
-    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.13.0",
     "xlsx": "^0.17.2",
