question almost complete

--- a/package.json
+++ b/package.json
@@ -26,9 +26,6 @@
     "@angular/router": "~14.1.2",
     "@angular/service-worker": "^14.1.2",
     "@auth0/angular-jwt": "^5.0.2",
-    "@ckeditor/ckeditor5-angular": "^4.0.0",
-    "@ckeditor/ckeditor5-build-classic": "^35.1.0",
-    "@ckeditor/ckeditor5-build-decoupled-document": "^35.1.0",
     "@fullcalendar/angular": "^5.10.1",
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
@@ -45,6 +42,7 @@
     "angularx-flatpickr": "^6.6.0",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.3",
+    "ckeditor4-angular": "^3.1.1",
     "date-fns": "^2.28.0",
     "exifr": "^4.3.5",
     "file-saver": "^2.0.5",
