--- a/package.json
+++ b/package.json
@@ -86,7 +86,6 @@
     "ts-node": "~8.3.0",
     "tslib": "^2.3.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.7.4",
-    "webpack": "^5.74.0"
+    "typescript": "~4.7.4"
   }
 }
