component fullmark, passmark decimal

--- a/.gitignore
+++ b/.gitignore
@@ -3957,3 +3957,12 @@ Thumbs.db
 .angular/cache/14.2.10/babel-webpack/ff354342f2d8c15fb1d3665fbdc32f2a.json
 .angular/cache/14.2.10/babel-webpack/ffab02cf95ad8a99bd6ebf1c5d6f2aaa.json
 .angular/cache/14.2.10/babel-webpack/ffb5fd549878453ea81ec6f0f2120e3c.json
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/7.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/16.pack
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/18.pack
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/19.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/20.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/22.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/23.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/24.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/25.pack_
