fee type confidential added

--- a/.gitignore
+++ b/.gitignore
@@ -3966,3 +3966,42 @@ Thumbs.db
 .angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/23.pack_
 .angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/24.pack_
 .angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/25.pack_
+.angular/cache/14.2.10/angular-webpack/49faa3da8a16ca5739e97795a04f244f82407361/0.pack_
+.angular/cache/14.2.10/angular-webpack/49faa3da8a16ca5739e97795a04f244f82407361/2.pack_
+.angular/cache/14.2.10/angular-webpack/7266f029cd9638035df4dfe5228dc4049d1395af/3.pack
+.angular/cache/14.2.10/angular-webpack/7266f029cd9638035df4dfe5228dc4049d1395af/4.pack
+.angular/cache/14.2.10/angular-webpack/7266f029cd9638035df4dfe5228dc4049d1395af/5.pack
+.angular/cache/14.2.10/angular-webpack/7266f029cd9638035df4dfe5228dc4049d1395af/6.pack
+.angular/cache/14.2.10/angular-webpack/7266f029cd9638035df4dfe5228dc4049d1395af/7.pack
+.angular/cache/14.2.10/angular-webpack/7266f029cd9638035df4dfe5228dc4049d1395af/8.pack
+.angular/cache/14.2.10/angular-webpack/7266f029cd9638035df4dfe5228dc4049d1395af/9.pack
+.angular/cache/14.2.10/angular-webpack/7266f029cd9638035df4dfe5228dc4049d1395af/index.pack.old
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/0.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/3.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/8.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/10.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/15.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/18.pack
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/19.pack
+.angular/cache/14.2.10/babel-webpack/0a8c26df421da00130a2d117c184deb2.json
+.angular/cache/14.2.10/babel-webpack/3c8a48bdd228562fea5590c35665902c.json
+.angular/cache/14.2.10/babel-webpack/3f298936264f239e6dbb91a7aaed1037.json
+.angular/cache/14.2.10/babel-webpack/4fa5d6c0d6ca220595b5c95045e5b1c1.json
+.angular/cache/14.2.10/babel-webpack/7b8d48b029b5b81ed59c4c105145da46.json
+.angular/cache/14.2.10/babel-webpack/7d3d4c0ca0fe628b4b14325281087b06.json
+.angular/cache/14.2.10/babel-webpack/84f8a6004f013cb7ca530dd420fa196e.json
+.angular/cache/14.2.10/babel-webpack/88ae0f5646530d3710ae7b8dff0f883a.json
+.angular/cache/14.2.10/babel-webpack/98e1a8fedabb96862a29e11225716818.json
+.angular/cache/14.2.10/babel-webpack/3791a2a5941d6204bd4352714c275efb.json
+.angular/cache/14.2.10/babel-webpack/6114a076c9c9573b2223a094806714ca.json
+.angular/cache/14.2.10/babel-webpack/6567e380d72473c1d1a1ac8dfd4eff39.json
+.angular/cache/14.2.10/babel-webpack/a8996f5f8b1e25a0f4b61f58f76f94dd.json
+.angular/cache/14.2.10/babel-webpack/aa5a0f5e7650119d7e0c952c017ac2b3.json
+.angular/cache/14.2.10/babel-webpack/c42c67728bf363607376b8419701d3c1.json
+.angular/cache/14.2.10/babel-webpack/c83e3abac55f22d761d50f11c4ddd1fb.json
+.angular/cache/14.2.10/babel-webpack/d3cc87f070984e119d0e6c8ea9c1143a.json
+.angular/cache/14.2.10/babel-webpack/d8b643a791112ccd95d6d7044f2e006c.json
+.angular/cache/14.2.10/babel-webpack/e38b5884808b0a3e8f4063f463af6a52.json
+.angular/cache/14.2.10/babel-webpack/e829003c818f358e2e66a5deee9d3bb1.json
+.angular/cache/14.2.10/babel-webpack/ef55e24c68e2334a4cf59646d2f19a90.json
+.angular/cache/14.2.10/babel-webpack/f4eef3e6dba2b9a9e482ac7443612b81.json
