add download in assign class

--- a/.gitignore
+++ b/.gitignore
@@ -3896,3 +3896,32 @@ Thumbs.db
 .angular/cache/14.2.10/babel-webpack/ffbffcd99b5a2113db4a9bb3d28d632d.json
 .angular/cache/14.2.10/babel-webpack/ffd892067d5e56cf2fc96fa96ccb8028.json
 .angular/cache/14.2.10/babel-webpack/fffa5dc9e1588b3a87f0fb5496e17195.json
+.angular/cache/14.2.10/angular-webpack/7266f029cd9638035df4dfe5228dc4049d1395af/19.pack
+.angular/cache/14.2.10/angular-webpack/7266f029cd9638035df4dfe5228dc4049d1395af/20.pack
+.angular/cache/14.2.10/angular-webpack/7266f029cd9638035df4dfe5228dc4049d1395af/21.pack
+.angular/cache/14.2.10/angular-webpack/7266f029cd9638035df4dfe5228dc4049d1395af/22.pack
+.angular/cache/14.2.10/angular-webpack/7266f029cd9638035df4dfe5228dc4049d1395af/23.pack
+.angular/cache/14.2.10/angular-webpack/7266f029cd9638035df4dfe5228dc4049d1395af/24.pack
+.angular/cache/14.2.10/angular-webpack/7266f029cd9638035df4dfe5228dc4049d1395af/25.pack
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/0.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/3.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/4.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/11.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/13.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/16.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/19.pack
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/20.pack
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/24.pack_
+.angular/cache/14.2.10/angular-webpack/b9fdafb879a51dfe9027d16f854c092313576548/25.pack_
+.angular/cache/14.2.10/babel-webpack/3a808b85ef0cd47b740adca97f295cb1.json
+.angular/cache/14.2.10/babel-webpack/7b03702346e19efd2e43f263f10e1985.json
+.angular/cache/14.2.10/babel-webpack/77f3b8b287881911798f9a25a87c4757.json
+.angular/cache/14.2.10/babel-webpack/418b306654e580af16c4654e4968da9d.json
+.angular/cache/14.2.10/babel-webpack/609f41a2a8aabba319f2a05aef244324.json
+.angular/cache/14.2.10/babel-webpack/663dbeeb173bbdec3907c6294d441e99.json
+.angular/cache/14.2.10/babel-webpack/40345e1d1d669e0708258148e333cde4.json
+.angular/cache/14.2.10/babel-webpack/95325fb5cb26eb096332b8e7a8fceda7.json
+.angular/cache/14.2.10/babel-webpack/111979eca288eaa4cd3ec13814a0cad4.json
+.angular/cache/14.2.10/babel-webpack/d95a3728613f380d89359fc9cc07ac6d.json
+.angular/cache/14.2.10/babel-webpack/e08af5765fadb04503fb192774cef00f.json
+.angular/cache/14.2.10/babel-webpack/eb3e3c08d8123770baf2fe237017dc65.json
